plugins {
    id 'java'
    id 'application'
}

group = 'edu.upc.prop.clusterxx'

ext {
    javaMainClass = 'edu.upc.prop.clusterxx.MainWindow' // <-- Canviat aquí
}

application {
    mainClassName = javaMainClass
}

// Configuració per al JAR principal de l'aplicació
jar {
    manifest {
        attributes 'Main-Class': javaMainClass // <-- Apunta ara a MainWindow
    }
}

// Task per generar un JAR per a DriverPartida amb la classe principal corresponent
task jarDriverPartida(type: Jar) {
    archiveBaseName.set('DriverPartida')
    manifest {
        attributes 'Main-Class': 'edu.upc.prop.clusterxx.drivers.DriverPartida'
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    with jar
}
build.dependsOn jarDriverPartida

// Task per generar un JAR per a DriverEstadistica amb la classe principal corresponent
task jarDriverEstadistica(type: Jar) {
    archiveBaseName.set('DriverEstadistica')
    manifest {
        attributes 'Main-Class': 'edu.upc.prop.clusterxx.drivers.DriverEstadistica'
    }
    from sourceSets.main.output
    dependsOn classes
}
build.dependsOn jarDriverEstadistica

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

test {
    useJUnit()
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.guava:guava:33.0.0-jre'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.0' // Versió més recent
    implementation 'com.google.code.gson:gson:2.8.9'
    testImplementation('junit:junit:4.13.1')
    testImplementation 'org.mockito:mockito-core:4.8.1'
    implementation 'com.google.guava:guava:32.1.2-jre'
}

tasks.named('run') {
    standardInput = System.in
}
